--- a/runtime-config.json
+++ b/runtime-config.json
@@ -1,6 +1,6 @@
 {
   "featureFlags": {
-    "ENABLE_RESOURCE_PROVIDER_CONTEXT": true,
+    "ENABLE_RESOURCE_PROVIDER_CONTEXT": false,
     "ENABLE_ITEM_PAGE_CONTEXTS": true,
     "ENABLE_TIMER_PROVIDER_CONTEXT": true,
     "ENABLE_TIMER_PROVIDER_SIMPLIFIED_CONTEXT": false,
