Disable ENABLE_TIMER_PROVIDER_CONTEXT feature flag

--- a/runtime-config.json
+++ b/runtime-config.json
@@ -2,7 +2,7 @@
   "featureFlags": {
     "ENABLE_RESOURCE_PROVIDER_CONTEXT": false,
     "ENABLE_ITEM_PAGE_CONTEXTS": true,
-    "ENABLE_TIMER_PROVIDER_CONTEXT": true,
+    "ENABLE_TIMER_PROVIDER_CONTEXT": false,
     "ENABLE_TIMER_PROVIDER_SIMPLIFIED_CONTEXT": false,
     "ENABLE_NAVIGATION_PROVIDER_CONTEXT": false,
     "ENABLE_MODAL_PROVIDER_CONTEXT": true,
